[package]
name = "ckeylock-api"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
ckeylock-core = "0.1.1"
futures-util = "0.3.31"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.44.1"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
