[package]
name = "ckeylock-core"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
license-file.workspace = true
description = "Core library for ckeylock"
[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
