[package]
name = "ckeylock-core"
version = "0.1.2"
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
description = "Core library for ckeylock."

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
