[package]
name = "ckeylock"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aes-gcm = "0.10.3"
bincode = { version = "2.0.1", features = ["serde"] }
ckeylock-core = "0.1.1"
cryptostream = "0.3.2"
dashmap = { version = "6.1.0", features = ["serde"] }
futures-util = "0.3.31"
hex = "0.4.3"
lazy_static = "1.5.0"
oneshot = "0.1.11"
ron = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha3 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
